--- a/Frontend/src/app/features/match/sidebar/sidebar.css
+++ b/Frontend/src/app/features/match/sidebar/sidebar.css
@@ -1,18 +1,24 @@
 section {
-    background-color: rgba(0, 0, 0, 0.7);
-    width: 80%;
-    height: 80% !important;
-    min-width: 55vh;
-    min-height: 80vh;
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    padding: 20px;
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 80%;
+  height: 80% !important;
+  min-width: 55vh;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  padding: 20px;
 }
 
 section h2 {
-    color: white;
-    text-align: left;
-    letter-spacing: 5px;
-    font-weight: 500;
+  color: white;
+  text-align: left;
+  letter-spacing: 5px;
+  font-weight: 500;
+}
+
+@media (max-width: 768px) {
+  section {
+    min-height: 90vh;
+  }
 }
