--- a/Frontend/src/app/shared/components/header/header.css
+++ b/Frontend/src/app/shared/components/header/header.css
@@ -1,5 +1,5 @@
 .logo {
-  height:105px;
+  height: 105px;
   width: auto;
 }
 
@@ -10,6 +10,7 @@ header {
   position: sticky;
   width: 100%;
   top: 0;
+  z-index: 9999;
 }
 
 nav ul {
@@ -32,10 +33,10 @@ nav ul li span {
 }
 
 h1 {
-    font-size: 2.5rem;
-    margin: 0;
-    font-family: 'Quicksand', sans-serif !important;
-    font-weight: 900;
+  font-size: 2.5rem;
+  margin: 0;
+  font-family: 'Quicksand', sans-serif !important;
+  font-weight: 900;
 }
 
 a {
@@ -74,18 +75,18 @@ nav a:hover::after {
 }
 
 .LoginButton {
-    background-color: #ff6648;
-    color: #ffffff;
-    height: 3rem;
-    width: 10rem;
-    border: none;
-    padding: 10px 20px;
-    margin-right: 3rem;
-    border-radius: 30px;
-    cursor: pointer;
-    font-weight: 500;
-    font-size: 1rem;
-    transition: background-color 0.3s, color 0.3s;
+  background-color: #ff6648;
+  color: #ffffff;
+  height: 3rem;
+  width: 10rem;
+  border: none;
+  padding: 10px 20px;
+  margin-right: 3rem;
+  border-radius: 30px;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 1rem;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .SectionBar {
@@ -100,7 +101,7 @@ nav a:hover::after {
   padding-right: 20px;
   font-size: 1.125rem !important;
   font-family: 'Syne', sans-serif !important;
-
+  z-index: 9999;
 }
 
 .menu-icon {
@@ -144,7 +145,7 @@ nav a:hover::after {
 
   .menu-icon {
     display: flex !important;
-    margin-left: auto; 
+    margin-left: auto;
     margin-right: 2rem;
   }
 
@@ -152,12 +153,12 @@ nav a:hover::after {
     display: none !important;
     flex-direction: column;
     background: #111;
-    position: absolute;
+    position: fixed;
     top: 70px;
     right: 10px;
     padding: 15px;
     border-radius: 8px;
-    z-index: 1000;
+    z-index: 9999;
     width: 200px;
     height: auto;
   }
@@ -172,4 +173,3 @@ nav a:hover::after {
     width: 7rem;
   }
 }
-
