--- a/Frontend/src/app/features/hero/hero.html
+++ b/Frontend/src/app/features/hero/hero.html
@@ -10,7 +10,7 @@
         sea simple, amigable e innovador. Conectando <br />
         empresas y candidatos de una manera más inteligente
       </p>
-      <button class="btn-login">Comienza ahora</button>
+      <button class="btn-login" routerLink="signup">Comienza ahora</button>
     </div>
   </div>
 </section>
