--- a/Frontend/src/app/features/signup-empresas/signup-empresas.html
+++ b/Frontend/src/app/features/signup-empresas/signup-empresas.html
@@ -2,27 +2,27 @@
     <section class="backgroud">
         <div class="signupForm">
         <h2>Registrate</h2>
-        <form>
+        <form [formGroup]="signupEmpresasForm">
 
             <div class="form">
             <label>Nombre Empresa</label>
-            <input type="text" id="name_empresa"/>
+            <input type="text" id="name_empresa" formControlName="name_empresa" />
 
             <label>NIT</label>
-            <input type="text" id="NIT"/>
+            <input type="text" id="NIT"  formControlName="NIT" />
          
             <label>Email</label>
-            <input type="email" id="email" name="email" placeholder="Ingresa tu email" required />
+            <input type="email" id="email" name="email" placeholder="Ingresa tu email" formControlName="email" />
 
             <label for="password">Contraseña</label>
-            <input type="password" id="password"name="password" placeholder="Ingresa tu contraseña" required />
+            <input type="password" id="password"name="password" placeholder="Ingresa tu contraseña"  formControlName="password" />
  
             <label for="password">Confirmar contraseña</label>
-            <input type="password" id="repassword" name="repassword" placeholder="Ingresa tu contraseña" required />
+            <input type="password" id="repassword" name="repassword" placeholder="Ingresa tu contraseña" formControlName="repassword"/>
      
             </div>
             <div class="link">
-            <button type="submit">Registrar</button> 
+            <button type="submit" (click)="OnSignUpEmpresa()">Registrar</button> 
             <a routerLink="/login"> ¿Ya eres miembro? <br> Inicia Sesión </a>
             </div>
         </form>
