--- a/Frontend/src/app/features/match/bottombar/bottombar.html
+++ b/Frontend/src/app/features/match/bottombar/bottombar.html
@@ -1,4 +1,4 @@
-<section>
+<section class="card-options">
   <div class="options">
     <div class="optionButton" (click)="sidebarActivated()">
       <i class="fa-solid fa-message icons"></i>
