Correcion de bugs

--- a/Frontend/src/app/features/match/swipe/swipe.css
+++ b/Frontend/src/app/features/match/swipe/swipe.css
@@ -140,6 +140,16 @@ p {
     padding-right: 3%; */
   }
 
+  .black-row {
+    background-color: white;
+    border-radius: 100%;
+  }
+
+  .black-row-mirror {
+    background: white;
+    border-radius: 100%;
+  }
+
   .vacant-image {
     width: 100% !important;
     height: 100% !important;
