Cambio de opciones en header con Login

--- a/Frontend/src/app/features/hero/hero.html
+++ b/Frontend/src/app/features/hero/hero.html
@@ -15,7 +15,7 @@
   </div>
 </section>
 
-<div class="feature-1">
+<div id="feature-1" class="feature-1">
   <h2>Descubre oportunidades cerca de ti</h2>
   <p>
     Usa nuestros filtros inteligentes para explorar miles de ofertas de empleo. Ajusta tu búsqueda
@@ -41,7 +41,7 @@
   </div>
 </div>
 
-<div class="feature-3">
+<div id="feature-3" class="feature-3">
   <div class="image-content">
     <img src="assets/img/feature-3.jpg" alt="Icono de colaboración" />
   </div>
