--- a/Frontend/src/app/features/match/sidebar/sidebar.html
+++ b/Frontend/src/app/features/match/sidebar/sidebar.html
@@ -1,10 +1,5 @@
-<section>
-    <h2>
-        Mensajes
-    </h2>
+<section class="mensajes">
+  <h2>Mensajes</h2>
 
-    <p>
-        Aquí van los mensajes
-    </p>
-
+  <p>Aquí van los mensajes</p>
 </section>
