--- a/Frontend/src/app/features/match/sidebar/sidebar.css
+++ b/Frontend/src/app/features/match/sidebar/sidebar.css
@@ -1,4 +1,4 @@
-section {
+.mensajes {
   background-color: rgba(0, 0, 0, 0.7);
   width: 80%;
   height: 80% !important;
@@ -8,9 +8,10 @@ section {
   flex-direction: column;
   border-radius: 10px;
   padding: 20px;
+  z-index: 1500;
 }
 
-section h2 {
+.mensajes h2 {
   color: white;
   text-align: left;
   letter-spacing: 5px;
@@ -18,7 +19,11 @@ section h2 {
 }
 
 @media (max-width: 768px) {
-  section {
-    min-height: 90vh;
+  .mensajes {
+    width: 100% !important;
+    height: 100% !important;
+    border-radius: 0px;
+    min-height: 0vh;
+    padding: 0px;
   }
 }
