--- a/Frontend/src/app/shared/components/header/header.css
+++ b/Frontend/src/app/shared/components/header/header.css
@@ -129,9 +129,9 @@ nav a:hover::after {
   display: none;
 }
 
-.message-switch {
+/* .message-switch {
   display: none;
-}
+} */
 
 @media (max-width: 768px) {
   nav ul {
