--- a/Frontend/src/app/features/match/match.css
+++ b/Frontend/src/app/features/match/match.css
@@ -13,7 +13,7 @@
 }
 
 app-sidebar {
-  flex: 1;
+  /* flex: 1; */
 }
 
 app-filter {
@@ -22,7 +22,7 @@ app-filter {
 }
 
 .main-content {
-  flex: 2;
+  /* flex: 2; */
   display: flex;
   flex-direction: row;
   gap: 20px;
@@ -37,11 +37,13 @@ app-filter {
 
   app-sidebar {
     /* display: none; ELIMINAR */
-    position: absolute;
+    /* position: absolute; */
     z-index: 1000;
     top: 5rem;
     max-width: 100%;
-    margin-top: 15%;
+    /* margin-top: 1%; */
+    height: 100%;
+    /* max-height: 95vh  ; */
     background-color: rgba(0, 0, 0, 0.8);
   }
 
