--- a/Frontend/src/app/features/match/sidebar/sidebar.css
+++ b/Frontend/src/app/features/match/sidebar/sidebar.css
@@ -1,13 +1,13 @@
 .mensajes {
   background-color: rgba(0, 0, 0, 0.7);
-  width: 80%;
-  height: 80% !important;
-  min-width: 55vh;
+  width: 45%;
+  height: 75% !important;
+  min-width: 50vh;
   min-height: 80vh;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
-  padding: 20px;
+  padding: 2rem;
   z-index: 1500;
 }
 
@@ -18,12 +18,21 @@
   font-weight: 500;
 }
 
+.title {
+  color: white;
+  margin-bottom: 2rem;
+}
+
+.description {
+  color: white;
+}
+
 @media (max-width: 768px) {
   .mensajes {
     width: 100% !important;
     height: 100% !important;
     border-radius: 0px;
-    min-height: 0vh;
+    min-height: 70vh;
     padding: 0px;
   }
 }
