--- a/Frontend/src/app/features/match/sidebar/sidebar.html
+++ b/Frontend/src/app/features/match/sidebar/sidebar.html
@@ -1,5 +1,5 @@
 <section class="mensajes">
-  <h2>Mensajes</h2>
+  <h2 class="title">Mensajes</h2>
 
-  <p>Aquí van los mensajes</p>
+  <p class="description">Aquí van los mensajes</p>
 </section>
