--- a/Frontend/src/app/features/match/sidebar/sidebar.css
+++ b/Frontend/src/app/features/match/sidebar/sidebar.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 10px;
-  padding: 2rem;
+  /* padding: 2rem; */
   z-index: 1500;
 }
 
